# 8051Project

./: CMakeLists.txt  README.md
asset/: map.tmx  map2.tmx
asset/animations/: player_animations.xml  slime2_animations.xml  slime_animations.xml
asset/animations/animals/: cow_animations.xml
asset/animations/character/: player_action_animations.xml  player_animations.xml
asset/tilesets/: bridges.tsx  building.tsx  fences.tsx  grass.tsx  hills.tsx  lily_pads.tsx  paths.tsx  soil.tsx  water.tsx
src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  main.cpp
src/ecs/: Component.h  ComponentType.h  Entity.h  Tile.h  World.h
src/ecs/component/: Animation.h  Input.h  Interaction.h  Inventory.h  Physics.h  Render.h  Stats.h  Tag.h  UI.h
src/ecs/core/: Camera.h  Component.h  ComponentType.h  Entity.h  World.cpp  World.h
src/ecs/event/: AudioEventQueue.h  BaseEvent.h  EventEnums.h  EventManager.h
src/ecs/system/: AnimationClip.h  AnimationSystem.h  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  DestructionSystem.h  EventResponseSystem.cpp  EventResponseSystem.h  KeyboardInputSystem.h  MainMenuSystem.cpp  MainMenuSystem.h  MouseInputSystem.cpp  MouseInputSystem.h  (+5 more)
src/factory/: EntityFactory.cpp  EntityFactory.h  MapEntityFactory.cpp  MapEntityFactory.h  UIFactory.cpp  UIFactory.h
src/game/: Game.cpp  Game.h  GameplayEnums.h
src/manager/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  Scene.cpp  Scene.h  SceneManager.h  TextureManager.cpp  TextureManager.h
src/map/: Map.cpp  Map.h  MapData.h  MapLoader.cpp  MapLoader.h  MapRenderer.cpp  MapRenderer.h  TileData.h  TileTypes.h  Tileset.h
src/scene/: Scene.cpp  Scene.h  SceneType.h
src/systems/: AnimationSystem.cpp  AnimationSystem.h  CameraSystem.h  CollisionResponseSystem.cpp  CollisionResponseSystem.h  CollisionSystem.cpp  CollisionSystem.h  CropGrowthSystem.h  CropVisualSystem.h  EventBindings.cpp  EventBindings.h  HUDSystem.cpp  HUDSystem.h  InventoryUISystem.cpp  InventoryUISystem.h  KeyboardInputSystem.cpp  KeyboardInputSystem.h  MainMenuSystem.cpp  MainMenuSystem.h  MouseInputSystem.cpp  MouseInteractionResponseSystem.h  MovementSystem.cpp  MovementSystem.h  PlayerActionResponseSystem.h  PlayerActionSystem.cpp  PlayerActionSystem.h  PlayerControlSystem.h  RenderSystem.cpp  RenderSystem.h  SelectionHighlightSystem.cpp  SelectionHighlightSystem.h  SpriteSystem.cpp  SpriteSystem.h  UIRenderSystem.h
src/utils/: Collision.cpp  Collision.h  Constants.h  CropEnums.h  GridUtils.h  ItemEnums.h  RenderUtils.h  Vector2D.cpp  Vector2D.h
(+12 files in other folders)
